# NetCalc

./: .gitignore  CMakeLists.txt  README.md
cmake/: GenerateTargetTriplet.cmake
import/win/lib/: fmt.lib
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  nc_client.cpp  nc_client.h  tcp_client.cpp  tcp_client.h  tcp_connector.cpp  tcp_connector.h  terminal.cpp  terminal.h  version.h  version.h.in
src/common/buffers/: strings_ring.h
src/common/locker/: spinlock_mutex.cpp  spinlock_mutex.h
src/common/net/: iserver_engine.h  newtork_initializer.cpp  newtork_initializer.h  select_base_server_engine.h
src/common/thread/: runnable.cpp  runnable.h
src/common/timer/: clock.h
src/server/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.hpp  connection.cpp  connection.h  listener.cpp  listener.h  main.cpp  nc_server.cpp  nc_server.h  tcp_server.cpp  tcp_server.h  version.h  version.h.in
